@@ -1,7 +1,6 @@
 package t.me.p1azmer.plugin.dungeons.key.editor;
 
 import org.bukkit.entity.Player;
-import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.jetbrains.annotations.NotNull;
 import t.me.p1azmer.engine.api.menu.AutoPaged;
@@ -10,18 +9,16 @@ import t.me.p1azmer.engine.api.menu.impl.EditorMenu;
 import t.me.p1azmer.engine.api.menu.impl.MenuOptions;
 import t.me.p1azmer.engine.api.menu.impl.MenuViewer;
 import t.me.p1azmer.engine.editor.EditorManager;
-import t.me.p1azmer.engine.utils.ItemUtil;
-import t.me.p1azmer.engine.utils.StringUtil;
+import t.me.p1azmer.engine.utils.ItemReplacer;
 import t.me.p1azmer.plugin.dungeons.DungeonPlugin;
-import t.me.p1azmer.plugin.dungeons.key.Key;
 import t.me.p1azmer.plugin.dungeons.config.Config;
 import t.me.p1azmer.plugin.dungeons.editor.EditorLocales;
+import t.me.p1azmer.plugin.dungeons.key.Key;
 import t.me.p1azmer.plugin.dungeons.key.KeyManager;
 import t.me.p1azmer.plugin.dungeons.lang.Lang;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class KeyListEditor extends EditorMenu<DungeonPlugin, KeyManager> implements AutoPaged<Key> {
@@ -29,21 +26,19 @@ public class KeyListEditor extends EditorMenu<DungeonPlugin, KeyManager> impleme
     public KeyListEditor(@NotNull KeyManager keyManager) {
         super(keyManager.plugin(), keyManager, Config.EDITOR_TITLE_KEY.get(), 45);
 
-        this.addReturn(39).setClick((viewer, event) -> {
-            this.plugin.runTask(task -> this.plugin.getEditor().open(viewer.getPlayer(), 1));
-        });
+        this.addReturn(39).setClick((viewer, event) ->
+                this.plugin.runTask(task -> this.plugin.getEditor().open(viewer.getPlayer(), 1)));
         this.addNextPage(44);
         this.addPreviousPage(36);
 
-        this.addCreation(EditorLocales.KEY_CREATE, 41).setClick((viewer, event) -> {
-            this.handleInput(viewer, Lang.EDITOR_DUNGEON_ENTER_ID, wrapper -> {
-                if (!keyManager.create(StringUtil.lowerCaseUnderscore(wrapper.getTextRaw()))) {
-                    EditorManager.error(viewer.getPlayer(), plugin.getMessage(Lang.DUNGEON_KEY_ERROR_EXISTS).getLocalized());
-                    return false;
-                }
-                return true;
-            });
-        });
+        this.addCreation(EditorLocales.KEY_CREATE, 41).setClick((viewer, event) ->
+                this.handleInput(viewer, Lang.EDITOR_DUNGEON_ENTER_KEY_ID, wrapper -> {
+                    if (!keyManager.create(wrapper.getTextRaw())) {
+                        EditorManager.error(viewer.getPlayer(), plugin.getMessage(Lang.DUNGEON_KEY_ERROR_EXISTS).getLocalized());
+                        return false;
+                    }
+                    return true;
+                }));
     }
 
     @Override
@@ -60,19 +55,19 @@ public class KeyListEditor extends EditorMenu<DungeonPlugin, KeyManager> impleme
     @Override
     @NotNull
     public List<Key> getObjects(@NotNull Player player) {
-        return plugin.getKeyManager().getKeys().stream().sorted(Comparator.comparing(Key::getId)).collect(Collectors.toList());
+        return plugin.getKeyManager().getKeys().stream().sorted(Comparator.comparing(Key::getId)).toList();
     }
 
     @Override
     @NotNull
     public ItemStack getObjectStack(@NotNull Player player, @NotNull Key key) {
         ItemStack item = new ItemStack(key.getItem());
-        ItemUtil.mapMeta(item, meta -> {
-            meta.setDisplayName(EditorLocales.KEY_OBJECT.getLocalizedName());
-            meta.setLore(EditorLocales.KEY_OBJECT.getLocalizedLore());
-            meta.addItemFlags(ItemFlag.values());
-            ItemUtil.replace(meta, key.replacePlaceholders());
-        });
+        ItemReplacer.create(item)
+                .setDisplayName(EditorLocales.KEY_OBJECT.getLocalizedName())
+                .setLore(EditorLocales.KEY_OBJECT.getLocalizedLore())
+                .setHideFlags(true)
+                .replace(key.replacePlaceholders())
+                .writeMeta();
         return item;
     }
 
